shift fixes

--- a/freedom/css/cover.css
+++ b/freedom/css/cover.css
@@ -23,7 +23,7 @@
   }
 
   .wel {
-    width: 30vw;
+    width: 25vw;
     margin-bottom: 5vw;
   }
 
